--- a/practica02css3 2/css/estilos.css
+++ b/practica02css3 2/css/estilos.css
@@ -26,12 +26,65 @@ header nav ul li{
 	margin-right: 15px;
 	padding-bottom: 2px;
 	/*text-decoration: underline;*/
+}
+
+#bgoffer{
+	left: -35px;
+	top: -400px;
+	position: relative;
 
 }
+
 #granthams{
 	margin-top: 25px;
 	margin-left: 25px
 }
+
 #paint{
 	float: right;
+}
+#primerseccion{
+	margin-top: 60px;
+}
+
+#primerseccion article{
+	display: inline-block;
+	vertical-align: top;
+}
+
+#secc01art01{
+	margin-left: 30px;
+	width: 61%;
+}
+
+#secc01art02{
+	margin-left: 50px;
+	width: 30%;
+
+}
+
+#secc01art02 ul{
+	list-style: none;
+}
+
+#secc01art02 ul li:before{
+	color: #FF0099;
+	content: "• ";
+}
+
+
+
+
+
+.colorrosa{
+	color: #FF0099;
+
+}
+
+.letragrande{
+	font-size: 3.5em;
+}
+
+.nito{
+	font-weight: bold;
 }
